Vehicle 수정 전 백업

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -141,5 +141,7 @@ ManualIPAddress=
 
 
 [CoreRedirects]
++ClassRedirects=(OldName="/Script/ProjectCharon.NewInputFunctionSet",NewName="/Script/ProjectCharon.InputFunctionSet")
+
 
 
