Boat 액터 기능 중 일부를 부모 클래스인 Vehicle로 옮김.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -142,6 +142,8 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/ProjectCharon.NewInputFunctionSet",NewName="/Script/ProjectCharon.InputFunctionSet")
++FunctionRedirects=(OldName="/Script/ProjectCharon.Vehicle.Ride",NewName="/Script/ProjectCharon.Vehicle.RegisterRider")
++FunctionRedirects=(OldName="/Script/ProjectCharon.Vehicle.UnRide",NewName="/Script/ProjectCharon.Vehicle.UnregisterRider")
 
 
 
