--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,3 +8,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
+[/Script/Prismatiscape.PrismatiscapeSettings]
+PrismatiscapeManagerClass=None
+
