Input Config 교체를 스택 형식으로 수정하기 전 커밋.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,9 +8,16 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="AnimNotify.Test",DevComment="")
++GameplayTagList=(Tag="Character.State.UsingHands.Left",DevComment="")
++GameplayTagList=(Tag="Character.State.UsingHands.Right",DevComment="")
 +GameplayTagList=(Tag="ChracterState.Major.Vehicle.Riding",DevComment="탈 것 타고 있는지")
 +GameplayTagList=(Tag="Cooldown.Boat.Row",DevComment="")
++GameplayTagList=(Tag="Damage.Type.Physical",DevComment="")
 +GameplayTagList=(Tag="Event.SprintEnd",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Impact.Wood",DevComment="")
++GameplayTagList=(Tag="InputTag.Cancel",DevComment="")
++GameplayTagList=(Tag="InputTag.Confirm",DevComment="")
 +GameplayTagList=(Tag="InputTag.Jump",DevComment="")
 +GameplayTagList=(Tag="InputTag.Sprint",DevComment="")
 +GameplayTagList=(Tag="InputTag.Test.TestAction2",DevComment="")
@@ -18,5 +25,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Vehicle.Action1",DevComment="")
 +GameplayTagList=(Tag="InputTag.Vehicle.Action2",DevComment="")
 +GameplayTagList=(Tag="InputTag.Vehicle.Action3",DevComment="")
++GameplayTagList=(Tag="InputTag.Vehicle.Action4",DevComment="")
++GameplayTagList=(Tag="InputTag.Vehicle.Action5",DevComment="")
 +GameplayTagList=(Tag="Parameter.RunSpeed",DevComment="")
++GameplayTagList=(Tag="Vehicle.Rider.Holdfast",DevComment="")
++GameplayTagList=(Tag="Vehicle.State.Invincible",DevComment="")
 
