--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,7 +8,9 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Event.Test",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.Test",DevComment="")
++GameplayTagList=(Tag="Character.State.Interacting",DevComment="")
 +GameplayTagList=(Tag="Character.State.UsingHands.Left",DevComment="")
 +GameplayTagList=(Tag="Character.State.UsingHands.Right",DevComment="")
 +GameplayTagList=(Tag="ChracterState.Major.Vehicle.Riding",DevComment="탈 것 타고 있는지")
@@ -18,6 +20,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Impact.Wood",DevComment="")
 +GameplayTagList=(Tag="InputTag.Cancel",DevComment="")
 +GameplayTagList=(Tag="InputTag.Confirm",DevComment="")
++GameplayTagList=(Tag="InputTag.Interaction",DevComment="")
 +GameplayTagList=(Tag="InputTag.Jump",DevComment="")
 +GameplayTagList=(Tag="InputTag.Sprint",DevComment="")
 +GameplayTagList=(Tag="InputTag.Test.TestAction2",DevComment="")
