--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -141,9 +141,10 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [CoreRedirects]
-+PropertyRedirects=(OldName="/Script/ProjectCharon.TaggedNotifyReceiver.NotifyReceiverLibrary",NewName="/Script/ProjectCharon.TaggedNotifyReceiver.NotifyReceiverLibraryClass")
-+PropertyRedirects=(OldName="/Script/ProjectCharon.AbilityTask_FindInteractables.OnInteractableFound",NewName="/Script/ProjectCharon.AbilityTask_FindInteractables.OnInteractionTargetChanged")
-+EnumRedirects=(OldName="/Script/ProjectCharon.InteractResult",NewName="/Script/ProjectCharon.EInteractResult")
++FunctionRedirects=(OldName="/Script/ProjectCharon.CharonAbility_EnterVehicle.TryRideVehicle",NewName="/Script/ProjectCharon.CharonAbility_EnterVehicle.TryEnterVehicle")
++FunctionRedirects=(OldName="/Script/ProjectCharon.Vehicle.MountVehicle",NewName="/Script/ProjectCharon.Vehicle.AttachToVehicle")
++FunctionRedirects=(OldName="/Script/ProjectCharon.Vehicle.UnmountVehicle",NewName="/Script/ProjectCharon.Vehicle.DetachFromVehicle")
+
 
 
 [/Script/Buoyancy.BuoyancyRuntimeSettings]
