--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,11 +6,14 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Ability.Event.Vehicle.Unmount",NewTagName="Ability.Event.ExitVehicle")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Event.ExitVehicle",DevComment="")
 +GameplayTagList=(Tag="Ability.Event.Test",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.Test",DevComment="")
 +GameplayTagList=(Tag="Character.State.Interacting",DevComment="")
++GameplayTagList=(Tag="Character.State.Riding",DevComment="")
 +GameplayTagList=(Tag="Character.State.UsingHands.Left",DevComment="")
 +GameplayTagList=(Tag="Character.State.UsingHands.Right",DevComment="")
 +GameplayTagList=(Tag="ChracterState.Major.Vehicle.Riding",DevComment="탈 것 타고 있는지")
