WaterInfo에 Z속도도 추가한 버젼 만들기, 전에 백업.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,6 +24,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DistanceFields.DefaultVoxelDensity=0.200000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -141,9 +142,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [CoreRedirects]
-+FunctionRedirects=(OldName="/Script/ProjectCharon.CharonAbility_EnterVehicle.TryRideVehicle",NewName="/Script/ProjectCharon.CharonAbility_EnterVehicle.TryEnterVehicle")
-+FunctionRedirects=(OldName="/Script/ProjectCharon.Vehicle.MountVehicle",NewName="/Script/ProjectCharon.Vehicle.AttachToVehicle")
-+FunctionRedirects=(OldName="/Script/ProjectCharon.Vehicle.UnmountVehicle",NewName="/Script/ProjectCharon.Vehicle.DetachFromVehicle")
 
 
 
