--- a/ProjectCharon.uproject
+++ b/ProjectCharon.uproject
@@ -46,7 +46,7 @@
 		},
 		{
 			"Name": "Prismatiscape",
-			"Enabled": false,
+			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/28e700a562a941978b2f3d46df591e05"
 		},
 		{
