--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -143,6 +143,10 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/ProjectCharon.EnvironmentInteractionWorldSubsystem",NewName="/Script/ProjectCharon.EnvironmentWorldSubsystem")
++FunctionRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.UpdateALLWaterZVelocity",NewName="/Script/ProjectCharon.CharonWaterManager.UpdateWaterTexturesInEditor")
++PropertyRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.WaterSpeedChangeTexture",NewName="/Script/ProjectCharon.CharonWaterManager.WaterSpeedChangeTextures")
++PropertyRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.WaterVelocityChangeTexture",NewName="/Script/ProjectCharon.CharonWaterManager.WaterVelocityChangeTextures")
++PropertyRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.WaterXYZVelocityTexture",NewName="/Script/ProjectCharon.CharonWaterManager.WaterXYZVelocityTextures")
 
 
 
