--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -14,5 +14,5 @@ PrismatiscapeManagerClass=None
 
 [/Script/ProjectCharon.EnvironmentDeveloperSettings]
 WaterFluidSimulatorClass=/Script/Engine.BlueprintGeneratedClass'/Game/Environments/Water/WaterFluidSim/BP_WaterFluidSim.BP_WaterFluidSim_C'
-CharonWaterManagerClass=/Script/Engine.BlueprintGeneratedClass'/Game/Test/Test1/BP_TestCharonWaterManager.BP_TestCharonWaterManager_C'
+CharonWaterManagerClass=/Script/Engine.BlueprintGeneratedClass'/Game/Environments/Water/Actors/BP_CharonWaterManager.BP_CharonWaterManager_C'
 
