--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,3 +1,4 @@
+;METADATA=(Diff=true, UseCommands=true)
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -5,22 +6,23 @@ ClearInvalidTags=False
 AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
+bDynamicReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagRedirects=(OldTagName="Ability.Event.Vehicle.Unmount",NewTagName="Ability.Event.ExitVehicle")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="Ability.Event.ExitVehicle",DevComment="")
-+GameplayTagList=(Tag="Ability.Event.Test",DevComment="")
++GameplayTagRedirects=(OldTagName="Ability.Event.Vehicle.Unmount",NewTagName="Ability.Event.ExitVehicle")
++GameplayTagRedirects=(OldTagName="Damage.Type.Physical",NewTagName="GameplayEffect.DamageType.Physical")
++GameplayTagRedirects=(OldTagName="Ability.Event.ExitVehicle",NewTagName="GameplayEvent.ExitVehicle")
++GameplayTagRedirects=(OldTagName="Ability.Event.Test",NewTagName="GameplayEvent.Test")
 +GameplayTagList=(Tag="AnimNotify.Test",DevComment="")
 +GameplayTagList=(Tag="Character.State.Interacting",DevComment="")
 +GameplayTagList=(Tag="Character.State.Riding",DevComment="")
 +GameplayTagList=(Tag="Character.State.UsingHands.Left",DevComment="")
 +GameplayTagList=(Tag="Character.State.UsingHands.Right",DevComment="")
-+GameplayTagList=(Tag="ChracterState.Major.Vehicle.Riding",DevComment="탈 것 타고 있는지")
-+GameplayTagList=(Tag="Cooldown.Boat.Row",DevComment="")
-+GameplayTagList=(Tag="Damage.Type.Physical",DevComment="")
-+GameplayTagList=(Tag="Event.SprintEnd",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Impact.Wood",DevComment="")
++GameplayTagList=(Tag="GameplayEffect.DamageType.Physical",DevComment="")
++GameplayTagList=(Tag="GameplayEvent.ExitVehicle",DevComment="")
++GameplayTagList=(Tag="GameplayEvent.Test",DevComment="")
 +GameplayTagList=(Tag="InputTag.Cancel",DevComment="")
 +GameplayTagList=(Tag="InputTag.Confirm",DevComment="")
 +GameplayTagList=(Tag="InputTag.Interaction",DevComment="")
