Vehicle 로직 수정 전. - Attach를 RiderComponent와 연동해서. - Vehicle이나 Rider 둘 중 하나가 Destroy 될 때 정리할 로직 추가.
로 수정하기 전에 꼬이면 안되니까 commit

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -20,7 +20,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.State.UsingHands.Left",DevComment="")
 +GameplayTagList=(Tag="Character.State.UsingHands.Right",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Impact.Wood",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Test2",DevComment="")
 +GameplayTagList=(Tag="GameplayEffect.DamageType.Physical",DevComment="")
++GameplayTagList=(Tag="GameplayEffect.TestEffect",DevComment="")
++GameplayTagList=(Tag="GameplayEvent.Death",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.ExitVehicle",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.Test",DevComment="")
 +GameplayTagList=(Tag="InputTag.Cancel",DevComment="")
