렌탈 베히클 반납 기능 구현 전.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Script/ProjectCharon.CharonGameInstance
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -68,6 +69,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/ProjectCharon")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/ProjectCharon")
+LocalPlayerClassName=/Script/ProjectCharon.CharonLocalPlayer
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -123,7 +126,9 @@ ManualIPAddress=
 +Profiles=(Name="WaterBodyCollision",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="Water",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="Default Water Collision Profile (Created by Water Plugin)")
 +Profiles=(Name="BlockExceptWater",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="",CustomResponses=((Channel="Water",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Water")
-+EditProfiles=(Name="WaterBodyCollision",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap)))
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="InteractionTrace")
++EditProfiles=(Name="WaterBodyCollision",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="InteractionTrace",Response=ECR_Ignore)))
++EditProfiles=(Name="Vehicle",CustomResponses=((Channel="InteractionTrace"),(Channel="Water",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -144,11 +149,8 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [CoreRedirects]
-+ClassRedirects=(OldName="/Script/ProjectCharon.EnvironmentInteractionWorldSubsystem",NewName="/Script/ProjectCharon.EnvironmentWorldSubsystem")
-+FunctionRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.UpdateALLWaterZVelocity",NewName="/Script/ProjectCharon.CharonWaterManager.UpdateWaterTexturesInEditor")
-+PropertyRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.WaterSpeedChangeTexture",NewName="/Script/ProjectCharon.CharonWaterManager.WaterSpeedChangeTextures")
-+PropertyRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.WaterVelocityChangeTexture",NewName="/Script/ProjectCharon.CharonWaterManager.WaterVelocityChangeTextures")
-+PropertyRedirects=(OldName="/Script/ProjectCharon.CharonWaterManager.WaterXYZVelocityTexture",NewName="/Script/ProjectCharon.CharonWaterManager.WaterXYZVelocityTextures")
++FunctionRedirects=(OldName="/Script/ProjectCharon.DockManagerComponent.CantRentThisVehicle",NewName="/Script/ProjectCharon.DockManagerComponent.CanRentThisVehicle")
+
 
 
 
