--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,3 +16,10 @@ PrismatiscapeManagerClass=None
 WaterFluidSimulatorClass=/Script/Engine.BlueprintGeneratedClass'/Game/Environments/Water/WaterFluidSim/BP_WaterFluidSim.BP_WaterFluidSim_C'
 CharonWaterManagerClass=/Script/Engine.BlueprintGeneratedClass'/Game/Environments/Water/Actors/BP_CharonWaterManager.BP_CharonWaterManager_C'
 
+[/Script/ProjectCharon.CharonUIDeveloperSettings]
+DefaultUIPolicyClass=/Script/Engine.BlueprintGeneratedClass'/Game/UI/B_CharonUIPolicy.B_CharonUIPolicy_C'
+
+[/Script/CommonInput.CommonInputSettings]
+bEnableEnhancedInputSupport=True
+InputData=/Game/UI/CharonUIInputData.CharonUIInputData_C
+
