--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagRedirects=(OldTagName="Damage.Type.Physical",NewTagName="GameplayEffect.DamageType.Physical")
 +GameplayTagRedirects=(OldTagName="Ability.Event.ExitVehicle",NewTagName="GameplayEvent.ExitVehicle")
 +GameplayTagRedirects=(OldTagName="Ability.Event.Test",NewTagName="GameplayEvent.Test")
++GameplayTagList=(Tag="Ability.Death.Message",DevComment="")
++GameplayTagList=(Tag="Ability.EnterVehicle.Message",DevComment="베히클 탑승 성공 시 보낼 메시지")
++GameplayTagList=(Tag="Ability.Interaction.Prompt.Message",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.Test",DevComment="")
 +GameplayTagList=(Tag="Character.State.Interacting",DevComment="")
 +GameplayTagList=(Tag="Character.State.Riding",DevComment="")
@@ -21,8 +24,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.State.UsingHands.Right",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Impact.Wood",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Test2",DevComment="")
++GameplayTagList=(Tag="GameplayEffect.Cooldown.RidierRowRight",DevComment="")
 +GameplayTagList=(Tag="GameplayEffect.DamageType.Physical",DevComment="")
 +GameplayTagList=(Tag="GameplayEffect.TestEffect",DevComment="")
++GameplayTagList=(Tag="GameplayEvent.BoatJump",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.Death",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.ExitVehicle",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.Test",DevComment="")
@@ -39,6 +44,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Vehicle.Action4",DevComment="")
 +GameplayTagList=(Tag="InputTag.Vehicle.Action5",DevComment="")
 +GameplayTagList=(Tag="Parameter.RunSpeed",DevComment="")
++GameplayTagList=(Tag="UI.Layer.Game",DevComment="")
++GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
++GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
++GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
++GameplayTagList=(Tag="Vehicle.Ability.BoatJump.Cooldwon",DevComment="")
++GameplayTagList=(Tag="Vehicle.Ability.Message",DevComment="Vehicle Ability 발동 시 메시지 채널")
 +GameplayTagList=(Tag="Vehicle.Rider.Holdfast",DevComment="")
 +GameplayTagList=(Tag="Vehicle.State.Invincible",DevComment="")
 
