프로젝트 파일 옮기기 전에

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,9 +14,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagRedirects=(OldTagName="Damage.Type.Physical",NewTagName="GameplayEffect.DamageType.Physical")
 +GameplayTagRedirects=(OldTagName="Ability.Event.ExitVehicle",NewTagName="GameplayEvent.ExitVehicle")
 +GameplayTagRedirects=(OldTagName="Ability.Event.Test",NewTagName="GameplayEvent.Test")
++GameplayTagRedirects=(OldTagName="InputTag.Vehicle.RowDirectionLeft",NewTagName="InputTag.Vehicle.RowHarder")
 +GameplayTagList=(Tag="Ability.Death.Message",DevComment="")
 +GameplayTagList=(Tag="Ability.EnterVehicle.Message",DevComment="베히클 탑승 성공 시 보낼 메시지")
 +GameplayTagList=(Tag="Ability.Interaction.Prompt.Message",DevComment="")
++GameplayTagList=(Tag="Ability.Row.Message",DevComment="")
++GameplayTagList=(Tag="Ability.Row.TestMessage",DevComment="나중에지워")
 +GameplayTagList=(Tag="AnimNotify.Test",DevComment="")
 +GameplayTagList=(Tag="Character.State.Interacting",DevComment="")
 +GameplayTagList=(Tag="Character.State.Riding",DevComment="")
@@ -26,6 +29,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Test2",DevComment="")
 +GameplayTagList=(Tag="GameplayEffect.Cooldown.RidierRowRight",DevComment="")
 +GameplayTagList=(Tag="GameplayEffect.DamageType.Physical",DevComment="")
++GameplayTagList=(Tag="GameplayEffect.ReverseRowDirection",DevComment="노 거꾸로 젓기")
 +GameplayTagList=(Tag="GameplayEffect.TestEffect",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.BoatJump",DevComment="")
 +GameplayTagList=(Tag="GameplayEvent.Death",DevComment="")
@@ -43,7 +47,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Vehicle.Action3",DevComment="")
 +GameplayTagList=(Tag="InputTag.Vehicle.Action4",DevComment="")
 +GameplayTagList=(Tag="InputTag.Vehicle.Action5",DevComment="")
++GameplayTagList=(Tag="InputTag.Vehicle.RowBackward",DevComment="")
++GameplayTagList=(Tag="InputTag.Vehicle.RowHarder",DevComment="")
++GameplayTagList=(Tag="InputTag.WASDBack",DevComment="")
 +GameplayTagList=(Tag="Parameter.RunSpeed",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Damage",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Game",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
