디렉토리 옮기기 전.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -150,6 +150,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/ProjectCharon.DockManagerComponent.CantRentThisVehicle",NewName="/Script/ProjectCharon.DockManagerComponent.CanRentThisVehicle")
++PropertyRedirects=(OldName="/Script/ProjectCharon.SwimBuoyancyComponent.SwimBasePontoonIndex",NewName="/Script/ProjectCharon.SwimBuoyancyComponent.WaterCheckPontoonIndex")
 
 
 
